src/grammar/DecafParser.js
// Generated from .\src\grammar\Decaf.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import DecafListener from './DecafListener.js';
import DecafVisitor from './DecafVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class DecafParser extends antlr4.Parser {

    static grammarFileName = "Decaf.g4";
    static literalNames = [ null, "'class'", "'Program'", "'{'", "'}'", 
                            "';'", "'['", "']'", "'struct'", "'int'", "'char'", 
                            "'boolean'", "'void'", "'('", "','", "')'", 
                            "'if'", "'else'", "'while'", "'return'", "'='", 
                            "'.'", "'*'", "'/'", "'%'", "'+'", "'-'", "'<'", 
                            "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", 
                            "'||'", "'!'", "'''", "'true'", "'false'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, "ID", 
                             "DIGIT", "LETTER", "ALPHA_NUM", "WS" ];
    static ruleNames = [ "program", "declaration", "varDeclaration", "structDeclaration", 
                         "varType", "methodDeclaration", "methodType", "parameter", 
                         "parameterType", "block", "statement", "location", 
                         "expression", "methodCall", "arg", "literal", "char_literal", 
                         "int_literal", "bool_literal", "id", "num" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = DecafParser.ruleNames;
        this.literalNames = DecafParser.literalNames;
        this.symbolicNames = DecafParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 12:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 8);
    		case 1:
    			return this.precpred(this._ctx, 7);
    		case 2:
    			return this.precpred(this._ctx, 6);
    		case 3:
    			return this.precpred(this._ctx, 5);
    		case 4:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, DecafParser.RULE_program);
	    var _la = 0; // Token type
	    try {
	        localctx = new ProgramInitContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 42;
	        this.match(DecafParser.T__0);
	        this.state = 43;
	        this.match(DecafParser.T__1);
	        this.state = 44;
	        this.match(DecafParser.T__2);
	        this.state = 48;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) !== 0)) {
	            this.state = 45;
	            this.declaration();
	            this.state = 50;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 51;
	        this.match(DecafParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaration() {
	    let localctx = new DeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, DecafParser.RULE_declaration);
	    try {
	        this.state = 56;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new DeclarationStructContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 53;
	            this.structDeclaration();
	            break;

	        case 2:
	            localctx = new DeclarationVarContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 54;
	            this.varDeclaration();
	            break;

	        case 3:
	            localctx = new DeclarationMethodContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 55;
	            this.methodDeclaration();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varDeclaration() {
	    let localctx = new VarDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, DecafParser.RULE_varDeclaration);
	    try {
	        this.state = 69;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new VarDeclContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 58;
	            this.varType();
	            this.state = 59;
	            this.id();
	            this.state = 60;
	            this.match(DecafParser.T__4);
	            break;

	        case 2:
	            localctx = new ArrDeclContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 62;
	            this.varType();
	            this.state = 63;
	            this.id();
	            this.state = 64;
	            this.match(DecafParser.T__5);
	            this.state = 65;
	            this.num();
	            this.state = 66;
	            this.match(DecafParser.T__6);
	            this.state = 67;
	            this.match(DecafParser.T__4);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	structDeclaration() {
	    let localctx = new StructDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, DecafParser.RULE_structDeclaration);
	    var _la = 0; // Token type
	    try {
	        localctx = new StructDeclContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 71;
	        this.match(DecafParser.T__7);
	        this.state = 72;
	        this.id();
	        this.state = 73;
	        this.match(DecafParser.T__2);
	        this.state = 77;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) !== 0)) {
	            this.state = 74;
	            this.varDeclaration();
	            this.state = 79;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 80;
	        this.match(DecafParser.T__3);
	        this.state = 82;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===DecafParser.T__4) {
	            this.state = 81;
	            this.match(DecafParser.T__4);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varType() {
	    let localctx = new VarTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, DecafParser.RULE_varType);
	    try {
	        this.state = 91;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new IntVarContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 84;
	            this.match(DecafParser.T__8);
	            break;

	        case 2:
	            localctx = new CharVarContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 85;
	            this.match(DecafParser.T__9);
	            break;

	        case 3:
	            localctx = new BooleanVarContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 86;
	            this.match(DecafParser.T__10);
	            break;

	        case 4:
	            localctx = new StructVarContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 87;
	            this.match(DecafParser.T__7);
	            this.state = 88;
	            this.id();
	            break;

	        case 5:
	            localctx = new StructDeclarationVarContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 89;
	            this.structDeclaration();
	            break;

	        case 6:
	            localctx = new VoidVarContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 90;
	            this.match(DecafParser.T__11);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	methodDeclaration() {
	    let localctx = new MethodDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, DecafParser.RULE_methodDeclaration);
	    var _la = 0; // Token type
	    try {
	        localctx = new MethodDeclContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 93;
	        this.methodType();
	        this.state = 94;
	        this.id();
	        this.state = 95;
	        this.match(DecafParser.T__12);
	        this.state = 106;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) !== 0)) {
	            this.state = 96;
	            this.parameter();
	            this.state = 101;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===DecafParser.T__13) {
	                this.state = 97;
	                this.match(DecafParser.T__13);
	                this.state = 98;
	                this.parameter();
	                this.state = 103;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 108;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 109;
	        this.match(DecafParser.T__14);
	        this.state = 110;
	        this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	methodType() {
	    let localctx = new MethodTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, DecafParser.RULE_methodType);
	    try {
	        this.state = 116;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case DecafParser.T__8:
	            localctx = new IntMethodContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 112;
	            this.match(DecafParser.T__8);
	            break;
	        case DecafParser.T__9:
	            localctx = new CharMethodContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 113;
	            this.match(DecafParser.T__9);
	            break;
	        case DecafParser.T__10:
	            localctx = new BooleanMethodContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 114;
	            this.match(DecafParser.T__10);
	            break;
	        case DecafParser.T__11:
	            localctx = new VoidMethodContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 115;
	            this.match(DecafParser.T__11);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameter() {
	    let localctx = new ParameterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, DecafParser.RULE_parameter);
	    try {
	        this.state = 127;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new IdParamContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 118;
	            this.parameterType();
	            this.state = 119;
	            this.id();
	            break;

	        case 2:
	            localctx = new IdArrParamContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 121;
	            this.parameterType();
	            this.state = 122;
	            this.id();
	            this.state = 123;
	            this.match(DecafParser.T__5);
	            this.state = 124;
	            this.match(DecafParser.T__6);
	            break;

	        case 3:
	            localctx = new VoidParamContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 126;
	            this.match(DecafParser.T__11);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameterType() {
	    let localctx = new ParameterTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, DecafParser.RULE_parameterType);
	    try {
	        this.state = 132;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case DecafParser.T__8:
	            localctx = new IntParamContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 129;
	            this.match(DecafParser.T__8);
	            break;
	        case DecafParser.T__9:
	            localctx = new CharParamContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 130;
	            this.match(DecafParser.T__9);
	            break;
	        case DecafParser.T__10:
	            localctx = new BooleanParamContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 131;
	            this.match(DecafParser.T__10);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, DecafParser.RULE_block);
	    var _la = 0; // Token type
	    try {
	        localctx = new BlockDeclContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.match(DecafParser.T__2);
	        this.state = 138;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) !== 0)) {
	            this.state = 135;
	            this.varDeclaration();
	            this.state = 140;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 144;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DecafParser.T__2) | (1 << DecafParser.T__12) | (1 << DecafParser.T__15) | (1 << DecafParser.T__17) | (1 << DecafParser.T__18) | (1 << DecafParser.T__25))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (DecafParser.T__34 - 35)) | (1 << (DecafParser.T__35 - 35)) | (1 << (DecafParser.T__36 - 35)) | (1 << (DecafParser.T__37 - 35)) | (1 << (DecafParser.ID - 35)) | (1 << (DecafParser.DIGIT - 35)))) !== 0)) {
	            this.state = 141;
	            this.statement();
	            this.state = 146;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 147;
	        this.match(DecafParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, DecafParser.RULE_statement);
	    try {
	        this.state = 187;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new IfStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 149;
	            this.match(DecafParser.T__15);
	            this.state = 150;
	            this.match(DecafParser.T__12);
	            this.state = 151;
	            this.expression(0);
	            this.state = 152;
	            this.match(DecafParser.T__14);
	            this.state = 153;
	            this.block();
	            break;

	        case 2:
	            localctx = new IfElseStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 155;
	            this.match(DecafParser.T__15);
	            this.state = 156;
	            this.match(DecafParser.T__12);
	            this.state = 157;
	            this.expression(0);
	            this.state = 158;
	            this.match(DecafParser.T__14);
	            this.state = 159;
	            this.block();
	            this.state = 160;
	            this.match(DecafParser.T__16);
	            this.state = 161;
	            this.block();
	            break;

	        case 3:
	            localctx = new WhileStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 163;
	            this.match(DecafParser.T__17);
	            this.state = 164;
	            this.match(DecafParser.T__12);
	            this.state = 165;
	            this.expression(0);
	            this.state = 166;
	            this.match(DecafParser.T__14);
	            this.state = 167;
	            this.block();
	            break;

	        case 4:
	            localctx = new ReturnExprStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 169;
	            this.match(DecafParser.T__18);
	            this.state = 170;
	            this.expression(0);
	            this.state = 171;
	            this.match(DecafParser.T__4);
	            break;

	        case 5:
	            localctx = new ReturnVoidStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 173;
	            this.match(DecafParser.T__18);
	            this.state = 174;
	            this.match(DecafParser.T__4);
	            break;

	        case 6:
	            localctx = new MethodStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 175;
	            this.methodCall();
	            this.state = 176;
	            this.match(DecafParser.T__4);
	            break;

	        case 7:
	            localctx = new BlockStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 7);
	            this.state = 178;
	            this.block();
	            break;

	        case 8:
	            localctx = new AssignmentStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 8);
	            this.state = 179;
	            this.location();
	            this.state = 180;
	            this.match(DecafParser.T__19);
	            this.state = 181;
	            this.expression(0);
	            this.state = 182;
	            this.match(DecafParser.T__4);
	            break;

	        case 9:
	            localctx = new ExpressionStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 9);
	            this.state = 184;
	            this.expression(0);
	            this.state = 185;
	            this.match(DecafParser.T__4);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	location() {
	    let localctx = new LocationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, DecafParser.RULE_location);
	    try {
	        this.state = 206;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new IdLocationContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 189;
	            this.id();
	            break;

	        case 2:
	            localctx = new ArrLocationContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 190;
	            this.id();
	            this.state = 191;
	            this.match(DecafParser.T__5);
	            this.state = 192;
	            this.expression(0);
	            this.state = 193;
	            this.match(DecafParser.T__6);
	            break;

	        case 3:
	            localctx = new IdDotLocationContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 195;
	            this.id();
	            this.state = 196;
	            this.match(DecafParser.T__20);
	            this.state = 197;
	            this.location();
	            break;

	        case 4:
	            localctx = new IdArrDotLocationContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 199;
	            this.id();
	            this.state = 200;
	            this.match(DecafParser.T__5);
	            this.state = 201;
	            this.expression(0);
	            this.state = 202;
	            this.match(DecafParser.T__6);
	            this.state = 203;
	            this.match(DecafParser.T__20);
	            this.state = 204;
	            this.location();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 24;
	    this.enterRecursionRule(localctx, 24, DecafParser.RULE_expression, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 220;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new LocationExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 209;
	            this.location();
	            break;

	        case 2:
	            localctx = new MethodCallExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 210;
	            this.methodCall();
	            break;

	        case 3:
	            localctx = new LiteralExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 211;
	            this.literal();
	            break;

	        case 4:
	            localctx = new NegativeExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 212;
	            this.match(DecafParser.T__25);
	            this.state = 213;
	            this.expression(3);
	            break;

	        case 5:
	            localctx = new NotExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 214;
	            this.match(DecafParser.T__34);
	            this.state = 215;
	            this.expression(2);
	            break;

	        case 6:
	            localctx = new ParExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 216;
	            this.match(DecafParser.T__12);
	            this.state = 217;
	            this.expression(0);
	            this.state = 218;
	            this.match(DecafParser.T__14);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 239;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 237;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new FirstArithOpExprContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DecafParser.RULE_expression);
	                    this.state = 222;
	                    if (!( this.precpred(this._ctx, 8))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
	                    }
	                    this.state = 223;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DecafParser.T__21) | (1 << DecafParser.T__22) | (1 << DecafParser.T__23))) !== 0))) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 224;
	                    this.expression(9);
	                    break;

	                case 2:
	                    localctx = new SecondArithOpExprContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DecafParser.RULE_expression);
	                    this.state = 225;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 226;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===DecafParser.T__24 || _la===DecafParser.T__25)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 227;
	                    this.expression(8);
	                    break;

	                case 3:
	                    localctx = new RelOpExprContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DecafParser.RULE_expression);
	                    this.state = 228;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 229;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DecafParser.T__26) | (1 << DecafParser.T__27) | (1 << DecafParser.T__28) | (1 << DecafParser.T__29))) !== 0))) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 230;
	                    this.expression(7);
	                    break;

	                case 4:
	                    localctx = new EqOpExprContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DecafParser.RULE_expression);
	                    this.state = 231;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 232;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===DecafParser.T__30 || _la===DecafParser.T__31)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 233;
	                    this.expression(6);
	                    break;

	                case 5:
	                    localctx = new CondOpExprContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DecafParser.RULE_expression);
	                    this.state = 234;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 235;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===DecafParser.T__32 || _la===DecafParser.T__33)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 236;
	                    this.expression(5);
	                    break;
